--- a/assets/css/icomoon.css
+++ b/assets/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/fonts-icomoon/icomoon.eot?4yazxi');
-  src:  url('../fonts/fonts-icomoon/icomoon.eot?4yazxi#iefix') format('embedded-opentype'),
-    url('../fonts/fonts-icomoon/icomoon.ttf?4yazxi') format('truetype'),
-    url('../fonts/fonts-icomoon/icomoon.woff?4yazxi') format('woff'),
-    url('../fonts/fonts-icomoon/icomoon.svg?4yazxi#icomoon') format('svg');
+  src:  url('../fonts/fonts-icomoon/icomoon.eot?xc9ji2');
+  src:  url('../fonts/fonts-icomoon/icomoon.eot?xc9ji2#iefix') format('embedded-opentype'),
+    url('../fonts/fonts-icomoon/icomoon.ttf?xc9ji2') format('truetype'),
+    url('../fonts/fonts-icomoon/icomoon.woff?xc9ji2') format('woff'),
+    url('../fonts/fonts-icomoon/icomoon.svg?xc9ji2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -33,6 +33,9 @@
 .icon-map-pin:before {
   content: "\e901";
 }
+.icon-menu:before {
+  content: "\e907";
+}
 .icon-phone:before {
   content: "\e902";
 }
@@ -44,4 +47,7 @@
 }
 .icon-share-2:before {
   content: "\e904";
+}
+.icon-x:before {
+  content: "\e908";
 }
