--- a/templates/menu/menu.html
+++ b/templates/menu/menu.html
@@ -5,17 +5,19 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../assets/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="../../assets/css/ionicons.min.css">
-
-	<link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../../assets/css/icomoon.css">
 
 	<!-- style for this template -->
-	<link rel="stylesheet" type="text/css" href="./explorer.css">
+	<link rel="stylesheet" type="text/css" href="./menu.css">
 	<!-- style for components -->
 
 	<title>Explorer</title>
 </head>
 <body>
-	<h1>Explorer is Here</h1>
+	<nav class="Nav-dummer">
+    <img src="../../assets/images/logoo-inverse.png" alt="">
+    <span class="icon-menu Nav-icon-open"></span>
+
+	</nav>
 </body>
 </html>
