--- a/assets/fonts/icomoon/style.css
+++ b/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?87fkhg');
-  src:  url('fonts/icomoon.eot?87fkhg#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?87fkhg') format('truetype'),
-    url('fonts/icomoon.woff?87fkhg') format('woff'),
-    url('fonts/icomoon.svg?87fkhg#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?oz7bq1');
+  src:  url('fonts/icomoon.eot?oz7bq1#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?oz7bq1') format('truetype'),
+    url('fonts/icomoon.woff?oz7bq1') format('woff'),
+    url('fonts/icomoon.svg?oz7bq1#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,6 +26,9 @@
 
 .icon-map-marker:before {
   content: "\f041";
+}
+.icon-money:before {
+  content: "\f0d6";
 }
 .icon-calendar:before {
   content: "\e900";
