--- a/templates/work/work.css
+++ b/templates/work/work.css
@@ -1,4 +1,6 @@
-.reset-padding {
+/* Estilos item Work */
+
+/* .reset-padding {
   padding: 0;
 }
 
@@ -66,7 +68,6 @@
   float: right;
   height: 100%;
   width: 20px;
-  /* background: blue; */
   text-align: center;
   padding-top: 10px;
 }
@@ -84,7 +85,6 @@
   width: 100%;
   height: auto;
   font-size: 18px;
-  /* background: yellow; */
 }
 
 .truncado {
@@ -193,4 +193,134 @@
   .container-item-work {
     width: 600px;
   }
+} */
+
+/* Fin Estilos Work */
+
+/* Estilos Work */
+
+body {
+  background: #eaebec;
+  font-family: 'Raleway', sans-serif;
 }
+
+.reset-padding {
+  padding: 0;
+}
+
+.reset-margin {
+  margin: 0;
+}
+
+.container-work {
+  position: relative;
+  height: auto;
+  margin: 0 auto;
+}
+
+.container-work-info {
+  height:auto;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.container-work-information {
+  height: auto;
+  width: 100%;
+  background: white;
+  border-radius: 7px;
+  padding: 15px 15px 15px 25px;
+}
+
+.font-genial {
+  font-size: 50px;
+}
+
+.work-name {
+  display: block;
+  font-size: 18px;
+  width: 100%;
+  height: 30px;
+}
+
+.publication {
+  display: block;
+  margin-top: -5px;
+  color: #a09d9d;
+  font-size: 12px;
+}
+
+.work-category {
+  height: 30px;
+  width: 62%;
+  background: #0157f7;
+  margin-left: -25px;
+  margin-top: 10px;
+  color: white;
+  font-size: 18px;
+  border-radius: 0px 10px 10px 0px;
+  padding: 2px 4px 2px 25px;
+}
+
+.work-information {
+  height: auto;
+  width: 100%;
+  font-size: 14px;
+  padding: 10px 0px;
+}
+
+.work-information span {
+  color: #78787e;
+  display: block;
+  margin-top: 10px;
+}
+
+.work-information i {
+  color: #000;
+  font-size: 17px;
+  margin-right: 10px;
+}
+
+.truncado {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.container-work-more {
+  height: 200px;
+   width: 100%;
+   background: blue;
+   padding: 10px;
+}
+
+.work-description {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  background: white;
+  padding: 25px;
+  text-align: justify;
+  border-radius: 7px;
+  font-size: 17px;
+}
+
+.work-description .title {
+  display: block;
+  margin: px 0px;
+  margin-bottom: 10px;
+  color: #327fe1;
+}
+
+@media (min-width:960px) {
+  .reset-margin1 {
+    position: relative;
+    padding: 0;
+    margin: 0 auto;
+    width: 960px;
+    float: none;
+  }
+}
+
+/* Fin Estilos work */
