--- a/templates/offer/offer.css
+++ b/templates/offer/offer.css
@@ -1,7 +1,11 @@
-body {
-  background: #eaebec;
-}
+ body {
+   background: #eaebec;
+   font-family: 'Raleway', sans-serif;
+ }
 
+ /* Styles of offer item  */
+
+ /*
 .reset-padding {
   padding: 0;
 }
@@ -271,4 +275,160 @@ body {
     width: 960px;
     float: none;
   }
+} */
+
+ /* End styles of offer item */
+
+ /* Styles of offer details */
+
+ .reset-padding {
+   padding: 0;
+ }
+
+ .reset-margin {
+   margin: 0;
+ }
+
+ .container-offer {
+   position: relative;
+   height: auto;
+   margin: 0 auto;
+ }
+
+ .offer-information {
+   height: auto;
+   width: 100%;
+   padding: 15px;
+ }
+
+ .offer-info-picture {
+   background: red;
+   border-radius: 7px 7px 0px 0px;
+   height: 150px;
+   width: 100%;
+ }
+
+ .offer-info-name {
+   width: 100%;
+   height: auto;
+   font-size: 20px;
+   text-align: center;
+   padding: 5px;
+   color: #000;
+   margin-top: 7px;
+   font-weight: bolder;
+ }
+
+ .offer-price {
+   width: 100%;
+   height: 60px;
+   padding: 10px 15px;
+ }
+
+ .offer-price span {
+   display: block;
+   float: left;
+   margin-left: 5px;
+   font-size: 30px;
+   color: #0050aa;
+ }
+
+ .offer-price .first-price {
+   display: block;
+   float: left;
+   width: 50%;
+   text-align: right;
+   padding-right: 10px;
+   color: #7e7777;
+   font-size: 30px;
+   height: auto;
+   text-decoration: line-through;
+   border-right: 1.4px solid #a9a9a9;
+ }
+
+ .offer-price .second-price {
+   display: block;
+   float: left;
+   margin-left: 10px;
+   font-size: 36px;
+   margin-top: -5px;
+   color: #0051aa;
+   font-weight: 500;
+ }
+
+ .valido {
+   display: block;
+   margin-top: 7px;
+   color: #a9a7a7;
+   font-size: 14px;
+   font-weight: 100;
+ }
+
+ .font-genial {
+   font-size: 50px;
+ }
+
+ .offer-information-1 {
+   background: white;
+   height: auto;
+   width: 100%;
+   border-radius: 7px;
+   padding: 0px 0px 10px 0px;
+ }
+
+ .offer-information-more {
+   background: blue;
+   width: 100%;
+   height: 200px;
+   padding: 15px;
+ }
+
+ .offer-business {
+   width: 100%;
+   background: #000;
+   height: 40px;
+   border-radius: 10px;
+   padding: 3px;
+ }
+
+ .offer-business-logo {
+   width: 35px;
+   height: 35px;
+   background: #ccc;
+   border-radius: 50%;
+   margin-left: 10px;
+   float: left;
+ }
+
+ .offer-business-info {
+   float: left;
+   margin-left: 4px;
+ }
+ .offer-business-info .name{
+   display: block;
+    color: white;
+    margin-top: 1px;
+ }
+.offer-business-info .ubication{
+  display: block;
+    margin-top: -2px;
+    font-size: 12px;
+    color: #8f9497;
 }
+ .offer-description {
+   height: auto;
+   padding: 10px 15px;
+   color: #4a4040;
+ }
+
+ @media (min-width:960px) {
+   .reset-margin1 {
+     position: relative;
+     padding: 0;
+     margin: 0 auto;
+     width: 960px;
+     float: none;
+   }
+ }
+
+ /* End Styles of offer deteils */
